# twinLab-Tutorials

./: !08-solve-inverse-linear.ipynb  !18-bayesian_optimisation.ipynb  .env.example  .gitignore  00-quickstart.ipynb  01-Advanced_Quickstart.ipynb  01-basic.ipynb  01-introduction.ipynb  02-basic-gp.ipynb  02-data-scaling.ipynb  02-gaussian-process-campaign.ipynb  02-guassian-process-campaign.ipynb  03-data-error.ipynb  03-functional-gp.ipynb  04-noise-column.ipynb  04-observation-noise-gp.ipynb  04-observational-noise-gp.ipynb  05-model-selection.ipynb  05-multi-fidelity-gp.ipynb  06-active-learning.ipynb  06-kernel-selection.ipynb  06-model-selection.ipynb  07-active-learning.ipynb  07-bayesian_optimisation.ipynb  08-analyse-dataset.ipynb  08-dimensionality_reduction.ipynb  08-solve-inverse-linear.ipynb  08-timings.ipynb  09-dimensionality_reduction.ipynb  09-wiggle.ipynb  10-functional.ipynb  10-initial_design.ipynb  11-active-learning.ipynb  11-solve_inverse_linear.ipynb  12-inverse-methods-linear.ipynb  13-inverse-methods-wing.ipynb  Advanced_Quickstart.ipynb  GP - active learning.ipynb  Quickstart.ipynb  README.md  (+4 more)
.github/: pull_request_template.md
.github/workflows/: black_format.yml  format.yml
UnfinishedNotebooks/: !09-wiggle.ipynb  !13-inverse-methods-wing.ipynb  data-error.ipynb  data-scaling.ipynb  output-correlation.ipynb  solve-inverse-linear.ipynb
notebooks/: 02-gaussian-process-campaign.ipynb  05-model-selection.ipynb  07-bayesian_optimisation.ipynb  09-dimensionality_reduction.ipynb  12-mixture_of_experts_gp.ipynb  13-classifier_gp.ipynb  Bernoulli_classifier.ipynb  Classification.ipynb  Dimensionality_reduction.ipynb  GPU_training.ipynb  Mixture_of_experts.ipynb  Noiseless_data.ipynb  Noisy_Data.ipynb  Prediction.ipynb  Quickstart.ipynb  Recommend_explore.ipynb  Recommend_optimize.ipynb  Update.ipynb  analyse-dataset.ipynb  bayesian_optimisation.ipynb  dimensionality_reduction.ipynb  initial_design.ipynb  model-selection.ipynb  solve_inverse_linear.ipynb
notebooks/archive/: active-learning.ipynb  introduction.ipynb
resources/campaigns/basic/: eval.csv  params.json
resources/campaigns/biscuits/: eval.csv  obs.csv  obs_std.csv  params.json
resources/campaigns/ukaea/: eval.csv  post.csv  posterior.py
resources/datasets/: biscuits.csv  example_data.csv  example_mean.csv  example_std.csv  grid.csv  not_a_csv.csv  test.csv
resources/datasets/scripts/: basic.py  ukaea.py
v1_demo/: 00-quickstart.ipynb  04-observation_noise_gp.ipynb  06-active-learning.ipynb
