[tool.poetry]
name = "twinLab-Demos"
version = "0.0.0"
description = "A demonstration of twinLab, a toolchain that makes it simple to build machine learning models with uncertainty quantification."
authors = ["Jasper Cantwell <jasper@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
twinlab = { path = "../twinlab/client/python", develop = true}
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
numpy = [
    { version = "^1.24", python = ">=3.8,<3.9" },
    { version = "^1.26", python = ">=3.9,<3.13" },
]
pandas = [
    { version = "^1.5.3", python = ">=3.8,<3.9" },
    { version = "^2.0", python = ">=3.9,<3.13" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
