[tool.poetry]
name = "twinLab-Demos"
version = "0.1.0"
package-mode = false
description = "Tutorials for twinLab, a toolchain that makes it simple to build machine learning models with uncertainty quantification."
authors = ["digiLab Solutions Ltd. <info@digilab.co.uk>"]
maintainers = [
    "Jasper Cantwell <jasper@digilab.co.uk>",
    "Sergio Chavez <sergio@digilab.co.uk>",
    "Alexander Mead <alexander@digilab.co.uk>",
    "Michelle Fabienne Bieger <michelle@digilab.co.uk>",
    "Sai-Aakash Ramesh <sai-aakash@digilab.co.uk>",
    "Micol Giannelli <micol@digilab.co.uk>",
    "Will Denby <will@digilab.co.uk>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
numpy = [
    { version = "^1.24", python = ">=3.8,<3.9" },
    { version = "^1.26", python = ">=3.9,<3.13" },
]
pandas = [
    { version = "^1.5.3", python = ">=3.8,<3.9" },
    { version = "^2.0", python = ">=3.9,<3.13" },
]
plotly = "^5.19.0"
# twinlab = "^2.5.0"
twinlab = { path = "../twinLab/client/python", develop = true } # Use this version if you are making changes in the interface
nbdime = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
