[tool.poetry]
name = "twinLab-Tutorials"
package-mode = false
description = "Tutorials for twinLab, a toolchain that makes it simple to build machine learning models with uncertainty quantification."
authors = ["digiLab Solutions Ltd. <twinlab@digilab.co.uk>"]
maintainers = ["twinLab Product Team <twinlab@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
numpy = [
    { version = "^1.24", python = ">=3.8,<3.9" },
    { version = "^1.26", python = ">=3.9,<3.13" },
]
pandas = [
    { version = "^1.5.3", python = ">=3.8,<3.9" },
    { version = "^2.0", python = ">=3.9,<3.13" },
]
plotly = "^5.19.0"
twinlab = "^2.10.0"
# twinlab = { path = "../client/python", develop = true }
nbdime = "^4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
